--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "test": "npx playwright",
+    "test": "npx playwright test",
     "test-edit": "npx playwright open http://localhost:5173"
   },
   "dependencies": {
